--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<org.mapstruct.version>1.5.3.Final</org.mapstruct.version>
+		<lombok-version>1.18.24</lombok-version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -84,11 +85,18 @@
                         <artifactId>mapstruct-processor</artifactId>
                         <version>${org.mapstruct.version}</version>
                     </path>
+                    <!-- other annotation processors -->
 					<path>
 						<groupId>org.projectlombok</groupId>
 						<artifactId>lombok</artifactId>
+						<version>${lombok-version}</version>
 					</path>
-                    <!-- other annotation processors -->
+					<!-- This is needed when using Lombok 1.18.16 and above -->
+					<path>
+						<groupId>org.projectlombok</groupId>
+						<artifactId>lombok-mapstruct-binding</artifactId>
+						<version>0.2.0</version>
+					</path>
                 </annotationProcessorPaths>
             </configuration>
         </plugin>
