--- a/pom.xml
+++ b/pom.xml
@@ -57,6 +57,12 @@
 			<artifactId>mapstruct</artifactId>
 			<version>${org.mapstruct.version}</version>
 		</dependency>
+
+		<dependency>
+			<groupId>com.yannbriancon</groupId>
+			<artifactId>spring-hibernate-query-utils</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
